2nd/00007/mod4/manual/otel.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: o11y-otel
  namespace: monitoring
spec:
  selector:
    matchLabels:
      app: o11y-otel
  template:
    metadata:
      labels:
        app: o11y-otel
    spec:
      serviceAccountName: o11y-otel
      containers:
      - name: otel-collector
        image: otel/opentelemetry-collector-contrib:0.158.0
        args: ["--config=/etc/otelcol/otel-collector-config.yaml"]
        volumeMounts:
        - name: config
          mountPath: /etc/otelcol
        - name: varlogpods
          mountPath: /var/log/pods
          readOnly: true
        - name: varlibdocker
          mountPath: /var/lib/docker/containers
          readOnly: true
      volumes:
      - name: config
        configMap:
          name: o11y-otel-config
      - name: varlogpods
        hostPath:
          path: /var/log/pods
      - name: varlibdocker
        hostPath:
          path: /var/lib/docker/containers
