2nd/00007/mod4/manual/grafana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: o11y-grafana
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: o11y-grafana
  template:
    metadata:
      labels:
        app: o11y-grafana
    spec:
      containers:
      - name: grafana
        image: grafana/grafana:13.0.6
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: o11y-grafana
  namespace: monitoring
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: o11y-grafana
