2nd/00007/mod4/manual/loki.yaml
apiVersion: v1
kind: Service
metadata:
  name: o11y-loki
  namespace: monitoring
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 3100
    targetPort: 3100
  - name: otlp-http
    port: 4318
    targetPort: 4318
  selector:
    app: o11y-loki
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: o11y-loki
  namespace: monitoring
spec:
  serviceName: o11y-loki
  replicas: 1
  selector:
    matchLabels:
      app: o11y-loki
  template:
    metadata:
      labels:
        app: o11y-loki
    spec:
      containers:
      - name: loki
        image: grafana/loki:3.7.6
        args:
        - -config.file=/etc/loki/loki.yaml
        ports:
        - containerPort: 3100
          name: http
        - containerPort: 4318
          name: otlp-http
        volumeMounts:
        - name: config
          mountPath: /etc/loki
        - name: storage
          mountPath: /tmp/loki
      volumes:
      - name: config
        configMap:
          name: loki-config
  volumeClaimTemplates:
  - metadata:
      name: storage
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: manual
      resources:
        requests:
          storage: 10Gi
