2nd/00007/mod4/manual/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-generator-svc
  namespace: o11y
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: log-generator
